# edu-plan-001-signup

./: README.md
api/api-fastapi/: main.py  pyproject.toml
api/api-java/: build.gradle
api/api-java/src/main/resources/: application.properties
api/api-nestjs/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
api/api-nestjs/src/: app.module.ts  main.ts
api/api-nestjs/src/exception/: custom.exception.ts  exception-response.ts  http-exception.filter.ts
api/api-nestjs/src/middleware/: logging.middleware.ts
api/api-nestjs/src/response/: success-response.ts
api/api-nestjs/src/signup/: signup.controller.ts  signup.service.ts
api/api-pynest/: README.md  main.py  pyproject.toml
api/api-pynest/src/: app_controller.py  app_module.py  app_service.py  custom_request_handler.py
api/api-pynest/src/signup/: signup_controller.py  signup_model.py  signup_module.py  signup_service.py
app/app-flet/: README.md  main.py  pyproject.toml
app/app-react/: package.json  pnpm-lock.yaml  vite.config.ts
app/app-react/src/: App.tsx
app/app-react/src-tauri/: Cargo.toml  tauri.conf.json
app/app-svelte/: package.json  pnpm-lock.yaml
app/app-svelte/src-tauri/: Cargo.toml  tauri.conf.json
app/app-svelte/src-tauri/src/: main.rs
app/app-svelte/src/routes/: +layout.svelte  +page.svelte
app/app_flutter/: pubspec.yaml
app/app_flutter/ios/Runner/: Info.plist
app/app_flutter/lib/: main.dart
app/app_flutter/macos/Runner.xcodeproj/: project.pbxproj
app/app_flutter/windows/: CMakeLists.txt
app/app_flutter/windows/runner/: Runner.rc
(+12 files in other folders)
