[project]
name = "app-flet"
version = "0.1.0"
description = ""
authors = [
    {name = "N-JY",email = "131830774+N-JY@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "flet (>=0.25.2,<0.26.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
